# smtml

./: CHANGES.md  dune-project  smtml.opam  smtml_ppx.opam
example/: product_mix.ml
lib/: ast.ml  ast.mli  batch.ml  boolean.ml  colibri2_mappings.ml  dune  eval.ml  eval.mli  eval_numeric.ml  eval_numeric.mli  expr.ml  expr.mli  incremental.ml  interpret.ml  interpret_intf.ml  lexer.mll  mappings.ml  mappings_intf.ml  model.ml  model.mli  num.ml  num.mli  optimizer.ml  optimizer.mli  parse.ml  parser.mly  real.ml  run.ml  solver.ml  solver_intf.ml  strings.ml  symbol.ml  symbol.mli  ty.ml  ty.mli  type.ml  value.ml  value.mli  z3_mappings.ml
lib/constructors/: bitVector.ml  boolean.ml  floatingPoint.ml  integer.ml
lib/exec/: interpret.ml
lib/mappings/: mappings_intf.ml  z3_mappings.ml
lib/optimizers/: optimizer.ml  optimizer.mli
lib/solvers/: batch.ml  incremental.ml  solver_intf.ml
lib/syntax/: ast.ml  expression.ml  value.ml
lib/text/: parser.mly
src/: colibri2_mappings.default.ml  colibri2_mappings.mli  config.ml  cvc5_mappings.mli  dune  expr.ml  expr.mli  interpret.ml  mappings.ml  mappings_intf.ml  model.ml  model.mli  solver.ml  solver_intf.ml
src/ast/: expr.ml
src/bitvector/: bitv.ml  bitv.mli  dune
src/smtml/: colibri2_mappings.default.ml  dolmenexpr_to_expr.ml  expr.ml  solver.ml  solver_intf.ml  statistics.ml  statistics.mli
src/smtml_ppx/: dune  example.ml  ppx.ml
src/solvers/: optimizer.ml  optimizer_intf.ml  solver_dispatcher.ml
test/: dune  test_batch.ml  test_bool.ml  test_f32.ml  test_harness.ml  test_str.ml
test/unit/: dune  (+14 more)
(+5 files in other folders)
