(ocamllex
 (modules lexer))
(menhir
 (modules parser))

(library
 (name encoding)
 (public_name encoding)
 (modules
  num
  value
  type
  symbol
  expr
  mappings_intf
  z3_mappings
  solver_intf
  model
  batch
  incremental
  ast
  lexer
  parser
  run
  interpret_intf
  interpret
 )
 (libraries core z3)
 (preprocess
  (pps ppx_jane)))
